--- a/macosx/Makefile.am
+++ b/macosx/Makefile.am
@@ -1,7 +1,6 @@
-etcdir = $(exex_prefix)/etc
-dist_etc_DATA = mdsip.plist
+dist_sysconf_DATA = mdsip.plist
+
+dist_bin_SCRIPTS = mdsplus_launchconfig
 
 scriptsdir = $(exec_prefix)/scripts
 dist_scripts_SCRIPTS = scripts/preinstall scripts/postinstall
-
-dist_bin_SCRIPTS = mdsplus_launchconfig
