--- a/configure.in
+++ b/configure.in
@@ -831,9 +831,12 @@ fi
 fi
 
 dnl Check for jdk files
-AC_CHECK_FILE($jni_inc_dir/jni.h,JDK_CFLAGS="-I$jni_inc_dir")
-AC_CHECK_FILE($jni_md_inc_dir/jni_md.h,JDK_CFLAGS="$JDK_CFLAGS -I$jni_md_inc_dir")
+OLD_CFLAGS=$CFLAGS
+CFLAGS="$CFLAGS -I$jni_inc_dir -I$jni_md_inc_dir"
+AC_CHECK_HEADER(jni.h,JDK_CFLAGS="-I$jni_inc_dir")
+AC_CHECK_HEADER(jni_md.h,JDK_CFLAGS="$JDK_CFLAGS -I$jni_md_inc_dir")
 AS_VAR_SET_IF([JDK_CFLAGS], [AS_CASE([$enable_java], [yes], [JAVA_APS="\$(JAVA_APS)"])])
+CFLAGS="$OLD_CFLAGS"
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
