--- a/javascope/Makefile.in
+++ b/javascope/Makefile.in
@@ -115,6 +115,7 @@ FFLAGS = @FFLAGS@
 FORLD = @FORLD@
 FOR_LDFLAGS = @FOR_LDFLAGS@
 FOR_LINKSHARED = @FOR_LINKSHARED@
+GEN_DEVICE = @GEN_DEVICE@
 GLOBUS_CFLAGS = @GLOBUS_CFLAGS@
 GLOBUS_FLAVOR = @GLOBUS_FLAVOR@
 GLOBUS_LIBS = @GLOBUS_LIBS@
@@ -153,6 +154,7 @@ LIBM = @LIBM@
 LIBNSL = @LIBNSL@
 LIBOBJS = @LIBOBJS@
 LIBPATH = @LIBPATH@
+LIBPRE = @LIBPRE@
 LIBPTHREAD = @LIBPTHREAD@
 LIBREADLINE = @LIBREADLINE@
 LIBRESOLV = @LIBRESOLV@
@@ -184,6 +186,7 @@ MDSSQL = @MDSSQL@
 MDSTCPIP = @MDSTCPIP@
 MDSVME = @MDSVME@
 MEMCHKLIB = @MEMCHKLIB@
+MINGW = @MINGW@
 MITDEVICES = @MITDEVICES@
 MITDEVICESIO_TARGETS = @MITDEVICESIO_TARGETS@
 MKDIR_P = @MKDIR_P@
@@ -207,6 +210,7 @@ REMCAM = @REMCAM@
 REMCAMLIB = @REMCAMLIB@
 RMIC = @RMIC@
 RPATHLINK = @RPATHLINK@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHARETYPE = @SHARETYPE@
 SHARETYPEJNI = @SHARETYPEJNI@
@@ -220,6 +224,7 @@ SYBASE_INC = @SYBASE_INC@
 SYBASE_LIB = @SYBASE_LIB@
 TAR_EXCLUDE = @TAR_EXCLUDE@
 TDIC = @TDIC@
+THREAD = @THREAD@
 UIL = @UIL@
 USE_PIPED_MESSAGING = @USE_PIPED_MESSAGING@
 USE_SEMAPHORE_H = @USE_SEMAPHORE_H@
@@ -311,6 +316,7 @@ DOCS = jScope.html jScope.jpg popup.jpg about_jscope.jpg \
 	DataProvider.html \
 	FrameData.html \
 	ReadMe.html data_popup.jpg data_setup.jpg frame_popup.jpg image_setup.jpg \
+	TWU_image_message.html \
 	UpdateEvent.html UpdateEventListener.html \
 	WaveData.html WaveDisplay.html
 
