Add LIBPTHREAD to links

--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -3,9 +3,11 @@ include @top_srcdir@/Makefile.inc
 ifeq "@MINGW@" "yes"
 	IMPLIB_MdsIpShr=@MAKELIBDIR@MdsIpShr.dll.a
 	MAKE_IMPLIB_MdsIpShr=-Wl,--out-implib,$(IMPLIB_MdsIpShr)
-	IMPLIB_MdsIpSrvShr=@MAKELIB@MdsIpSrvShr.dll.a
+	IMPLIB_MdsIpSrvShr=@MAKELIBDIR@MdsIpSrvShr.dll.a
 	MAKE_IMPLIB_MdsIpSrvShr=-Wl,--out-implib,$(IMPLIB_MdsIpSrvShr)
 endif
+
+LIBPTHREAD=@LIBPTHREAD@
 
 COMPRESSION_SOURCES=adler32.c compress.c deflate.c infblock.c infcodes.c\
 inffast.c inflate.c inftrees.c infutil.c trees.c uncompr.c zutil.c
@@ -211,26 +213,26 @@ $(MDSIP_UTIL) : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJ
 	$(MKDIR_P) $@
 
 $(MdsIpShr): $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
-	$(LINK.o) $(OUTPUT_OPTION) $^ @LINKSHARED@ $(MDSIPSHR_EXTRALIBS) $(LIBS) $(MAKE_IMPLIB_MdsIpShr)
+	$(LINK.o) $(OUTPUT_OPTION) $^ @LINKSHARED@ $(MDSIPSHR_EXTRALIBS) $(LIBS) $(LIBPTHREAD) $(MAKE_IMPLIB_MdsIpShr)
 
 LINK_MDSIPSHR = -L@MAKESHLIBDIR@ -lMdsIpShr
 $(MdsIpSrvShr): $(SERVER_LIB_OBJECTS) $(MdsIpShr)
-	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(SERVER_LIB_OBJECTS) $(LINK_MDSIPSHR) -lMdsShr -lTreeShr -lTdiShr $(LIBS) $(MAKE_IMPLIB_MdsIpSrvShr)
+	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(SERVER_LIB_OBJECTS) $(LINK_MDSIPSHR) $(LIBPTHREAD) -lMdsShr -lTreeShr -lTdiShr $(LIBS) $(MAKE_IMPLIB_MdsIpSrvShr)
 
 $(MdsIpTunnel): $(TUNNEL_OBJECTS) $(MdsIpShr)
-	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TUNNEL_OBJECTS) $(LINK_MDSIPSHR) $(LIBS)
+	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TUNNEL_OBJECTS) $(LINK_MDSIPSHR) $(LIBS) $(LIBPTHREAD)
 
 $(MdsIpTCP): $(TCP_OBJECTS) $(MdsIpShr)
-	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TCP_OBJECTS) $(LINK_MDSIPSHR) $(LIBS)
+	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TCP_OBJECTS) $(LINK_MDSIPSHR) $(LIBS) $(LIBPTHREAD)
 
 $(MdsIpTCPV6): $(TCPV6_OBJECTS) $(MdsIpShr)
-	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TCPV6_OBJECTS) $(LINK_MDSIPSHR) $(LIBS)
+	$(LINK.o) $(OUTPUT_OPTION) @LINKSHARED@ $(TCPV6_OBJECTS) $(LINK_MDSIPSHR) $(LIBS) $(LIBPTHREAD)
 
 $(MdsIpUDT): $(UDT_OBJECTS) $(MdsIpShr)
-	$(CXX) $(OUTPUT_OPTION) @LINKSHARED@ $(UDT_OBJECTS) $(CXXFLAGS) $(LINK_MDSIPSHR) $(LIBS) $(LDFLAGS)
+	$(CXX) $(OUTPUT_OPTION) @LINKSHARED@ $(UDT_OBJECTS) $(CXXFLAGS) $(LINK_MDSIPSHR) $(LIBS) $(LDFLAGS) $(LIBPTHREAD)
 
 $(MdsIpUDTV6): $(UDTV6_OBJECTS) $(MdsIpShr)
-	$(CXX) $(OUTPUT_OPTION) @LINKSHARED@ $(UDTV6_OBJECTS) $(CXXFLAGS) $(LINK_MDSIPSHR) $(LIBS) $(LDFLAGS)
+	$(CXX) $(OUTPUT_OPTION) @LINKSHARED@ $(UDTV6_OBJECTS) $(CXXFLAGS) $(LINK_MDSIPSHR) $(LIBS) $(LDFLAGS) $(LIBPTHREAD)
 
 $(MdsIpSSH) $(MdsIpHTTP):
 	ln -sf libMdsIpTunnel@SHARETYPE@ $@
