Have a global directory making rule

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -68,3 +68,6 @@ top_builddir = @abs_top_builddir@
 top_srcdir = @abs_top_srcdir@
 tooldir = $(exec_prefix)/$(target_alias)
 
+
+@MAKELIBDIR@ @MAKESHLIBDIR@ $(libdir):
+	$(MKDIR_P) $@
